--- a/recipes/chicken-pomodoro.html
+++ b/recipes/chicken-pomodoro.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>One Pot Chicken Pomodoro</h1>
     </body>
 </html>
