Complete chicken-pomodoro.html

--- a/recipes/chicken-pomodoro.html
+++ b/recipes/chicken-pomodoro.html
@@ -2,9 +2,51 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <title>Chicken Pomodoro</title>
     </head>
     <body>
         <h1>One Pot Chicken Pomodoro</h1>
-        <a href="../index.html">Home</a>
+        <img src="recipes-img/ALR-8730087-one-pot-chicken-pomodoro-recipe-VAT-4x3-1closeup-39a64dd4ec624e609e71f6f5133cd28a.webp" alt="Image of Chicken Pomodoro" height="400" width="500">
+        <h2>Description</h2>
+        <p>This one pot chicken pomodoro has a bright fresh flavor and is a fabulous weeknight meal. Pair with a salad to round out dinner.</p>
+        <h2>Ingridients</h2>
+        <h3>Chicken</h3>
+        <ul>
+            <li>1 pound thinly sliced skinless, boneless chicken breasts</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon garlic granules</li>
+            <li>1 teaspoon Italian seasoning</li>
+            <li>2 tablespoons olive oil, divided</li>
+        </ul>
+        <h3>Pomodoro Sauce</h3>
+        <ul>
+            <li>1 shallot, minced</li>
+            <li>4 cloves garlic, minced</li>
+            <li>1 (28 ounce) can can crushed tomatoes</li>
+            <li>½ teaspoon salt</li>
+            <li>1 teaspoon white sugar</li>
+            <li>½ teaspoon crushed red pepper flakes</li>
+            <li>1 tablespoon chopped fresh basil</li>
+            <li>1 ¾ cups chicken broth</li>
+            <li>¼ cup pinot grigio</li>
+            <li>1 pounds conchiglie pasta</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Gather all ingredients. Heat a deep cast iron skillet over medium heat.</li>
+            <img src="https://www.allrecipes.com/thmb/lTGz_3FRCxce6ctW7VxvqySMspk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8730087-one-pot-chicken-pomodoro-recipe-VAT-step-01-043904ab850148b18b7d69b227aff3d6.jpg" height="300" width="400">
+            <li>Season chicken breasts with salt, garlic, and Italian seasoning.</li>
+            <img src="https://www.allrecipes.com/thmb/9TgHKFgrIzLrpbO3_BEwzMZcz3w=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8730087-one-pot-chicken-pomodoro-recipe-VAT-step-02-cfd406ea0fa846189c82b7affacd35f4.jpg" height="300" width="400">
+            <li>Pour 2 teaspoons oil into the skillet. Once hot, add chicken. Cook until golden, turning once, about 4 minutes per side. Move chicken to one side of the skillet.</li>
+            <img src="https://www.allrecipes.com/thmb/deRxakWXhrQ6z130S9lskOZyMNs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8730087-one-pot-chicken-pomodoro-recipe-VAT-step-03-d8eaa5c3def944a591593f7323793fbc.jpg" height="300" width="400">
+            <li>Pour remaining oil into the skillet. Add minced shallot; cook until softened, about 3 minutes. Add the garlic, stir until fragrant, about 1 minute.</li>
+            <img src="https://www.allrecipes.com/thmb/QfH40Txe1UaVfWrviKa11sZ8B-4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8730087-one-pot-chicken-pomodoro-recipe-VAT-step-04-2-b8457bea871743189deb31ce542c7c6d.jpg" height="300" width="400">
+            <li>Add the crushed tomatoes, salt, sugar, red pepper flakes, and basil. Pour in chicken broth and wine. Stir to combine.</li>
+            <img src="https://www.allrecipes.com/thmb/8yu48hwQOAoJtyRi-0Drn2hbw7M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8730087-one-pot-chicken-pomodoro-recipe-VAT-step-05-1-930becb4606947ee91a47fb492a8591f.jpg" height="300" width="400">
+            <li>Add pasta to the skillet. Nestle chicken pieces on top of pasta. Reduce heat to medium-low. Cover, and cook until pasta is tender with a bite, about 8 minutes. Taste and adjust seasoning; serve immediately.</li>
+            <img src="https://www.allrecipes.com/thmb/TzBm4ALqrwsJlubMEXfDRitlGTg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-8730087-one-pot-chicken-pomodoro-recipe-VAT-step-06-7e41f96578784ffab271b725ea539f1b.jpg" height="300" width="400">
+        </ol>
+
+        <p><a href="../index.html">Home</a></p>
     </body>
 </html> 
