--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/chicken-pomodoro.html" rel="noopener noreferrer">One Pot Chicken Pomodoro</a>
+        <ul>
+        <li><a href="recipes/chicken-pomodoro.html" rel="noopener noreferrer">One Pot Chicken Pomodoro</a></li>
+        <li><a href="recipes/roman-style-pizza.html" rel="noopener noreferrer">Roman-Style Pizza</a></li>
+        <li><a href="recipes/cassava-cake.html">Cassava Cake</a></li>
+        </ul>
     </body>
 </html>
