--- a/recipes/cassava-cake.html
+++ b/recipes/cassava-cake.html
@@ -29,7 +29,7 @@
         <li>Bake in the preheated oven until set, about 1 hour. Turn the broiler on and bake until top of cake is browned, 2 to 3 minutes. Cool completely in the refrigerator before serving, about 1 hour.</li>
         <img src="https://www.allrecipes.com/thmb/ZoV1682iWbPs3gmF7ZpGUckBToo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR-212941-Cassava-Cake-Recipe-ddmfs-step-4-aba7b0c935bf40bfb0df34f6ac24e0ee.jpg" height="300" width="400">
     </ol>
-    <a href="../index.html"><p>Home</p></a>
+    <p><a href="../index.html">Home</a></p>
 
 </body>
 </html>
